--- a/pom.xml
+++ b/pom.xml
@@ -62,7 +62,38 @@
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
     <slf4j.version>1.7.13</slf4j.version>
+    <run>deploy</run>
   </properties>
+
+  <!-- Build Settings -->
+  <build>
+
+    <defaultGoal>antrun:run</defaultGoal>
+
+    <plugins>
+
+      <plugin>
+        <artifactId>maven-antrun-plugin</artifactId>
+        <version>1.8</version>
+        <inherited>false</inherited>
+        <dependencies>
+          <dependency>
+            <groupId>org.apache.ant</groupId>
+            <artifactId>ant</artifactId>
+            <version>1.10.5</version>
+          </dependency>
+        </dependencies>
+        <configuration>
+          <target>
+            <ant antfile="build.xml" target="${run}" />
+          </target>
+        </configuration>
+      </plugin>
+
+    </plugins>
+
+  </build>
+
 
   <!-- More Project Information -->
   <name>sit-util-bth</name>
@@ -156,6 +187,12 @@
                 </goals>
               </execution>
             </executions>
+            <configuration>
+              <gpgArguments>
+                <arg>--pinentry-mode</arg>
+                <arg>loopback</arg>
+              </gpgArguments>
+            </configuration>
           </plugin>
         </plugins>
       </build>
