--- a/pom.xml
+++ b/pom.xml
@@ -12,18 +12,18 @@
     <dependency>
       <groupId>org.apache.commons</groupId>
       <artifactId>commons-lang3</artifactId>
-      <version>3.4</version>
+      <version>3.9</version>
     </dependency>
 
     <dependency>
       <groupId>io.takari</groupId>
       <artifactId>maven-wrapper</artifactId>
-      <version>0.3.0</version>
+      <version>0.5.5</version>
     </dependency>
     <dependency>
       <groupId>io.takari</groupId>
       <artifactId>takari-archiver</artifactId>
-      <version>0.1.9</version>
+      <version>0.1.19</version>
     </dependency>
     <dependency>
       <groupId>org.slf4j</groupId>
@@ -34,20 +34,20 @@
     <dependency>
       <groupId>org.projectlombok</groupId>
       <artifactId>lombok</artifactId>
-      <version>1.18.2</version>
+      <version>1.18.8</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>ch.qos.logback</groupId>
       <artifactId>logback-classic</artifactId>
-      <version>1.1.3</version>
+      <version>1.3.0-alpha4</version>
       <scope>provided</scope>
     </dependency>
 
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>4.12</version>
+      <version>4.13-beta-3</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
@@ -61,7 +61,7 @@
   <properties>
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
-    <slf4j.version>1.7.13</slf4j.version>
+    <slf4j.version>1.7.28</slf4j.version>
     <run>deploy</run>
   </properties>
 
