--- a/pom.xml
+++ b/pom.xml
@@ -40,14 +40,14 @@
     <dependency>
       <groupId>ch.qos.logback</groupId>
       <artifactId>logback-classic</artifactId>
-      <version>1.3.0-alpha4</version>
+      <version>1.2.3</version>
       <scope>provided</scope>
     </dependency>
 
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>4.13-beta-3</version>
+      <version>4.12</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
