--- a/pom.xml
+++ b/pom.xml
@@ -108,7 +108,33 @@
       <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
     </repository>
   </distributionManagement>
+
   <profiles>
+
+    <profile>
+      <id>analyze</id>
+      
+      <build>
+        <plugins>
+        
+          <plugin>
+            <groupId>org.jacoco</groupId>
+            <artifactId>jacoco-maven-plugin</artifactId>
+            <version>0.8.3</version>
+            <executions>
+              <execution>
+                <goals>
+                  <goal>prepare-agent</goal>
+                </goals>
+              </execution>
+            </executions>
+          </plugin>
+          
+        </plugins>
+      </build>
+      
+    </profile>
+  
     <profile>
       <id>release</id>
       <activation>
